[project]
name = "zapier-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "mcp>=1.10.1",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
]
